# ProjectOmega

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ProjectOmega.sln  README.md
ProjectOmega/: ProjectOmega.vcxproj  ProjectOmega.vcxproj.filters
ProjectOmega/src/omega/: main.cpp
ProjectOmega/src/omega/core/: Game.cpp  Game.h  common.h
ProjectOmega/src/omega/ecs/: component.cpp  entity.cpp  entity.h  spritecomponent.cpp
src/omega/: common.h  main.cpp
src/omega/core/: common.h  game.cpp  game.h  types.h
src/omega/debug/: logger.cpp  logger.h
src/omega/ecs/: anim_sprite_component.cpp  anim_sprite_component.h  asteroid.cpp  asteroid.h  background_sprite_component.cpp  background_sprite_component.h  circle_component.cpp  circle_component.h  component.h  entity.cpp  entity.h  input_component.cpp  input_component.h  laser.cpp  laser.h  move_component.cpp  move_component.h  ship.cpp  ship.h  spritecomponent.cpp  spritecomponent.h
src/omega/util/: math.h  maths.cpp  maths.h  util.cpp  util.h
